[gd_scene load_steps=6 format=3 uid="uid://1divvd4fr6d3"]

[ext_resource type="Texture2D" uid="uid://cppcotww27rcl" path="res://art/Screenshot from 2023-07-17 15-18-14.png" id="1_4djyv"]
[ext_resource type="Script" path="res://scenes/UI/HUD.gd" id="1_n6tnm"]
[ext_resource type="PackedScene" uid="uid://baplf6rofo5er" path="res://scenes/Textures/red_button.tscn" id="3_sf1hx"]
[ext_resource type="PackedScene" uid="uid://dbdxerlb3rlht" path="res://scenes/UI/transitions.tscn" id="4_2864p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qutsy"]
size = Vector2(467.999, 328)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_n6tnm")

[node name="CanvasModulate" type="Node2D" parent="."]

[node name="BackgroundImage" type="TextureRect" parent="CanvasModulate"]
modulate = Color(0.220141, 0.21947, 4.81308e-08, 1)
offset_right = 1917.0
offset_bottom = 1077.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasModulate"]
offset_left = 713.0
offset_top = 300.0
offset_right = 1930.0
offset_bottom = 2048.0
scale = Vector2(0.3, 0.3)

[node name="SomethingLayout" type="HBoxContainer" parent="CanvasModulate/VBoxContainer"]
layout_mode = 2

[node name="RedButton" parent="CanvasModulate/VBoxContainer/SomethingLayout" instance=ExtResource("3_sf1hx")]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasModulate/VBoxContainer/SomethingLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 137
text = "Inventory"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasModulate/VBoxContainer"]
layout_mode = 2

[node name="RedButton" parent="CanvasModulate/VBoxContainer/HBoxContainer2" instance=ExtResource("3_sf1hx")]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasModulate/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 137
text = "Options
"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasModulate/VBoxContainer"]
layout_mode = 2

[node name="RedButton" parent="CanvasModulate/VBoxContainer/HBoxContainer3" instance=ExtResource("3_sf1hx")]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasModulate/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 137
text = "Quit"

[node name="Timer" type="Timer" parent="CanvasModulate"]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(87, 61)
scale = Vector2(0.209402, 0.237805)
texture = ExtResource("1_4djyv")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, 3.05176e-05)
shape = SubResource("RectangleShape2D_qutsy")

[node name="Transitions" parent="." instance=ExtResource("4_2864p")]
offset_left = 677.0
offset_top = 348.0
offset_right = -856.0
offset_bottom = -501.0

[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
